[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydbk"
version = "0.1.0"
authors = [
  { name="Benjamin W. Portner", email="" },
]
description = "A Python tool to extract .dbk archives."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers,"
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BenPortner/pydbk"
"Bug Tracker" = "https://github.com/BenPortner/pydbk/issues"